draft edgeRemoval algo

--- a/main.ipynb
+++ b/main.ipynb
@@ -338,7 +338,54 @@
     "    return noisyDegHis\n",
     "    \n",
     "\n",
+    "#Baseline in Day et al. SIGMOD'16\n",
+    "def nodeDP_edgeRemoval_degCum_Lap(G, maxDeg, epsilon, thetaList):\n",
+    "    theta = thetaList[0]\n",
     "    \n",
+    "    #Learning theta \n",
+    "    if len(thetaList) >1: #many choices \n",
+    "        epsilon_theta = epsilon/2.0 \n",
+    "        theta = learnTheta(G, maxDeg, epsilon_theta, thetaSet)\n",
+    "        epsilon_deg = epsilon-epsilon_theta\n",
+    "    \n",
+    "\n",
+    "    ####################\n",
+    "    #UPDATE here.....\n",
+    "    #Edge addition algorithm from empty graph till no edges can be added keep degree bounded by theta\n",
+    "    #Gt = nx.Graph()\n",
+    "    nodesNum = len(G.nodes())\n",
+    "    nodes = np.random.permutation(nodesNum)\n",
+    "    #Gt.add_nodes_from(nodes)\n",
+    "    degSeqGt = np.zeros(nodesNum)\n",
+    "    \n",
+    "    for v in nodes:\n",
+    "        for u in G.neighbors(v):\n",
+    "            if u<v and degSeqGt[u]<theta and degSeqGt[v]<theta:\n",
+    "                #Gt.add_edge(u,v)\n",
+    "                degSeqGt[u] = degSeqGt[u]+1\n",
+    "                degSeqGt[v] = degSeqGt[v]+1\n",
+    "    \n",
+    "    ####################\n",
+    "    \n",
+    "    \n",
+    "    #cumulative historm + lap noise\n",
+    "    degHis = degSeqToDegHis(degSeqGt, theta)\n",
+    "    degCum = pdfToCdf(degHis)\n",
+    "    #print(degCum[0:30]) ###TODO: SOMETHING incorrect: many nodes have counts cutting at theta, need to be smooth out..\n",
+    "    \n",
+    "    sens = theta + 1 \n",
+    "    noisyDegCum = lap(degCum, sens, epsilon)\n",
+    "    \n",
+    "    #print(noisyDegCum[0:30])\n",
+    "    noisyDegCum = postprocessCdf(noisyDegCum, nodesNum)\n",
+    "    #print(noisyDegCum[0:30])\n",
+    "    \n",
+    "    noisyDegHis = cdfToPdf(noisyDegCum)\n",
+    "    noisyDegHis = extendHis(noisyDegHis, maxDeg) #TODO: can be better\n",
+    "    \n",
+    "    return noisyDegHis\n",
+    "    \n",
+    "   \n",
     "    \n",
     "    \n",
     "    \n",
@@ -408,7 +455,7 @@
     "#noisyDegHis = nodeDP_flowgraph_degSeq_Lap(G,maxDeg,epsilon,[80]) #works for small graph\n",
     "#noisyDegHis = nodeDP_edgeAdd_degHisPart_Lap(G, maxDeg, epsilon, thetaList, paritionList) #INCOMPLETE\n",
     "noisyDegHis = nodeDP_edgeAdd_degCum_Lap(G,maxDeg,epsilon,[1000])\n",
-    "\n",
+    "noisyDegHis = nodeDP_edgeRemoval_degCum_Lap(G,maxDeg,epsilon,[1000])\n",
     "\n",
     "print(trueHis[0:30])\n",
     "print(noisyDegHis[0:30])\n",
