--- a/frontend/uploads/readme
+++ b/frontend/uploads/readme
@@ -15,3 +15,5 @@ Note that the algo.py and edgealgo.py are the files that modified from evalDegDi
 evalDegDist.py and evalDegDistedge.py will print the unmodified data and it will go through clear that actually produced the data needed to plot the frontier plot. 
 
 Note that the evalDegDist.py and evalDegDistedge.py are the files that modified from evalDegDist.py from the DPGraph folder. 
+
+All other python files are the same as the DPGraph folder
