print mean, std

--- a/main.ipynb
+++ b/main.ipynb
@@ -1235,11 +1235,9 @@
     "        \n",
     "    #rung M+1\n",
     "    weights.append(2*ladders[-1]* np.exp(epsilon/2.0*(-M-1))/(1-np.exp(-epsilon/2.0)))\n",
+    "        \n",
+    "    ####the only part that involves randomness, may store the earlier results for evaluation over multiple runs \n",
     "    \n",
-    "    #print(weights, sum(weights))\n",
-    "    \n",
-    "    ####the only part that involves randomness, may store the earlier results for evaluation\n",
-    "\n",
     "    errors = []\n",
     "    for i in range(repetition):\n",
     "        noisyCount = 0\n",
@@ -1300,22 +1298,23 @@
     "epsilon = 0.05\n",
     "repetition = 30\n",
     "errors = edgeDP_LadderMechanism(G, Gstat, queryType, k, epsilon,repetition)\n",
-    "print(np.median(errors))"
+    "print(np.mean(errors), np.std(errors))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 0.17618417739868164 seconds ---\n",
+      "--- 0.16189217567443848 seconds ---\n",
       "triangle -1 true count:  1612010.0\n",
       "480.48780720418335\n",
-      "0.00016532155507720177\n"
+      "0.0001575672607490028\n",
+      "0.00024371436901756194 0.00026513878905179395\n"
      ]
     }
    ],
@@ -1381,7 +1380,8 @@
     "        \n",
     "        errors.append(abs(noisyCount-trueCount)/trueCount)\n",
     "        \n",
-    "    print(np.median(errors))"
+    "    print(np.median(errors))\n",
+    "    print(np.mean(errors), np.std(errors))"
    ]
   },
   {
