--- a/main.ipynb
+++ b/main.ipynb
@@ -1068,6 +1068,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#refer to graph.cpp:  graph::ls for implementation details\n",
     "def edgeDP_computeLS(G, Gstat, queryType, k):\n",
     "    ls = 0.0 \n",
     "    if queryType == \"triangle\":\n",
@@ -1089,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1098,18 +1099,17 @@
     "    if queryType == \"triangle\":\n",
     "        lsd = lsd_triangle(G,Gstat,queryType,k)\n",
     "    elif queryType == \"kstar\":\n",
-    "         #TODO: incomplete\n",
+    "        lsd = lsd_kstar(G,Gstat,queryType,k)\n",
     "        return lsd\n",
     "    elif queryType == \"kclique\":\n",
-    "         #TODO: incomplete\n",
+    "        lsd = lsd_kclique(G,Gstat,queryType,k)\n",
     "        return lsd\n",
     "    elif queryType == \"ktriangle\":\n",
-    "        #TODO: incomplete\n",
+    "        lsd = lsd_ktriangle(G,Gstat,queryType,k)\n",
     "        return lsd\n",
     "    else:\n",
     "        print(queryType, \"is unspecified\")\n",
-    "    return lsd\n",
-    "\n"
+    "    return lsd\n"
    ]
   },
   {
@@ -1164,6 +1164,42 @@
     "            print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
     "            return LSD    \n",
     "          "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#refer to graph.cpp: lsd_kstar for implementation details (relatively complex)\n",
+    "def lsd_kstar(G,Gstat,queryType,k):\n",
+    "    #Incomplete\n",
+    "    return -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#refer to graph.cpp: ladder_kclique for implementation details (relatively easy)\n",
+    "def lsd_kclique(G,Gstat,queryType,k):\n",
+    "    #Incomplete\n",
+    "    return -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#refer to graph.cpp: ladder_ktriangle for implementation details (relatively easy)\n",
+    "def lsd_ktriangle(G,Gstat,queryType,k):\n",
+    "    #Incomplete\n",
+    "    return -1"
    ]
   },
   {
