--- a/main.ipynb
+++ b/main.ipynb
@@ -1068,7 +1068,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#refer to graph.cpp:  graph::ls for implementation details\n",
+    "#refer to graph.cpp:  graph::ls for implementation details [no need to implement]\n",
     "def edgeDP_computeLS(G, Gstat, queryType, k):\n",
     "    ls = 0.0 \n",
     "    if queryType == \"triangle\":\n",
