--- a/main.ipynb
+++ b/main.ipynb
@@ -1068,7 +1068,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#refer to graph.cpp:  graph::ls for implementation details [no need to implement]\n",
+    "#refer to graph.cpp:  graph::ls for implementation details \n",
     "def edgeDP_computeLS(G, Gstat, queryType, k):\n",
     "    ls = 0.0 \n",
     "    if queryType == \"triangle\":\n",
@@ -1184,7 +1184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#refer to graph.cpp: ladder_kclique for implementation details (relatively easy)\n",
+    "#refer to graph.cpp: ladder_kclique for implementation details (relatively easy, need to function \"computeLS\")\n",
     "def lsd_kclique(G,Gstat,queryType,k):\n",
     "    #Incomplete\n",
     "    return -1"
@@ -1196,7 +1196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#refer to graph.cpp: ladder_ktriangle for implementation details (relatively easy)\n",
+    "#refer to graph.cpp: ladder_ktriangle for implementation details (relatively easy, need to function \"computeLS\")\n",
     "def lsd_ktriangle(G,Gstat,queryType,k):\n",
     "    #Incomplete\n",
     "    return -1"
