ladder basic functions

--- a/main.ipynb
+++ b/main.ipynb
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,18 +1075,101 @@
     "        ls = Gstat.maxA\n",
     "        return ls\n",
     "    elif queryType == \"kstar\":\n",
-    "        #TODO: incomplete\n",
+    "        nodesNum = Gstat.nodesNum\n",
+    "        bucket = [-1] * nodesNum #bucket: the common neighbor sizes \n",
+    "        for i in range(nodesNum):\n",
+    "            for j in range(i+1, nodesNum):\n",
+    "                xij = int(G.has_edge(i,j))\n",
+    "                di = max(G.degree[i],G.degree[j]) - xij\n",
+    "                dj = min(G.degree[i],G.degree[j]) - xij \n",
+    "                bucket[di] = max(bucket[di],dj)\n",
+    "                \n",
+    "        uppers = []\n",
+    "        for i in reversed(range(nodesNum)):\n",
+    "            if bucket[i] <0:\n",
+    "                continue\n",
+    "            if (len(uppers)==0) or uppers[-1][1] < bucket[i]:\n",
+    "                uppers.append([i, bucket[i]])    \n",
+    "        #print(\"uppers(0-10):\", uppers[0:10])        \n",
+    "        for p in uppers:\n",
+    "            ls = max(ls, comb(p[0],k-1)+comb(p[1],k-1))\n",
+    "        \n",
+    "        print(ls)\n",
     "        return ls\n",
+    "    \n",
     "    elif queryType == \"kclique\":\n",
-    "        #TODO: incomplete\n",
+    "        nodesNum = Gstat.nodesNum\n",
+    "        for i in range(nodesNum):\n",
+    "            for j in range(i+1, nodesNum):\n",
+    "                ls  = max(ls, count_clique(G,Gstat.getA(min(i,j),max(i,j)),k-2))\n",
+    "        print(ls)\n",
     "        return ls\n",
+    "    \n",
     "    elif queryType == \"ktriangle\":\n",
-    "        #TODO: incomplete\n",
+    "        nodesNum = Gstat.nodesNum\n",
+    "        for i in range(nodesNum):\n",
+    "            for j in range(i+1, nodesNum):\n",
+    "                Aij = Gstat.getA(min(i,j),max(i,j))\n",
+    "                xij = int(G.has_edge(i,j))\n",
+    "                \n",
+    "                lsij = comb(len(Aij),k)\n",
+    "                for l in Aij:\n",
+    "                    ail = Gstat.geta(min(i,l),max(i,l))\n",
+    "                    ajl = Gstat.geta(min(l,j),max(l,j))\n",
+    "                    lsij = lsij + comb(ail-xij, k-1) + comb(ajl-xij,k-1)\n",
+    "                ls = max(ls,lsij)\n",
+    "        print(ls)\n",
     "        return ls\n",
+    "    \n",
     "    else:\n",
     "        print(queryType, \"is unspecified\")\n",
     "        return ls"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "856891.0\n",
+      "--- 77.45697474479675 seconds ---\n",
+      "16573.0\n",
+      "--- 160.7473108768463 seconds ---\n",
+      "116072.0\n",
+      "--- 203.01974391937256 seconds ---\n"
+     ]
+    }
+   ],
+   "source": [
+    "k = 3\n",
+    "queryType = \"kstar\"\n",
+    "start_time = time.time()\n",
+    "edgeDP_computeLS(G, Gstat, queryType, k)\n",
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
+    "\n",
+    "k = 4\n",
+    "queryType = \"kclique\"\n",
+    "start_time = time.time()\n",
+    "edgeDP_computeLS(G, Gstat, queryType, k)\n",
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
+    "\n",
+    "k=2\n",
+    "queryType = \"ktriangle\"\n",
+    "start_time = time.time()\n",
+    "edgeDP_computeLS(G, Gstat, queryType, k)\n",
+    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1162,43 +1245,123 @@
     "            LSD.append(gs)\n",
     "            print(\"LSD(0-10):\", LSD[0:10])\n",
     "            print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
+    "            return LSD      \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#refer to graph.cpp: lsd_kstar for implementation details \n",
+    "def lsd_kstar(G,Gstat,queryType,k):\n",
+    "    start_time = time.time()\n",
+    "    nodesNum = Gstat.nodesNum\n",
+    "    bucket = [-1] * nodesNum #bucket: the common neighbor sizes \n",
+    "    for i in range(nodesNum):\n",
+    "        for j in range(i+1, nodesNum):\n",
+    "            xij = int(G.has_edge(i,j))\n",
+    "            di = max(G.degree[i],G.degree[j]) - xij\n",
+    "            dj = min(G.degree[i],G.degree[j]) - xij \n",
+    "            bucket[di] = max(bucket[di],dj)\n",
+    "            \n",
+    "    #print(\"bucket(0-10):\", bucket[0:10])\n",
+    "    \n",
+    "    uppers = []\n",
+    "    for i in reversed(range(nodesNum)):\n",
+    "        if bucket[i] <0:\n",
+    "            continue\n",
+    "        if (len(uppers)==0) or uppers[-1][1] < bucket[i]:\n",
+    "            uppers.append([i, bucket[i]])   \n",
+    "    #print(\"uppers(0-10):\", uppers[0:10])\n",
+    "    \n",
+    "    gs = edgeDP_computeGS(G,Gstat,queryType,k)\n",
+    "    print(\"gs: \", gs)\n",
+    "    \n",
+    "    LSD = []\n",
+    "    \n",
+    "    while 1:\n",
+    "        lsd = 0\n",
+    "        for p in uppers:\n",
+    "            lsd = max(ls, comb(p[0],k-1)+comb(p[1],k-1))\n",
+    "            \n",
+    "            if p[0] < nodesNum-2:\n",
+    "                p[0] = p[0]+1\n",
+    "            elif p[1] < nodesNum-2:\n",
+    "                p[1] = p[1]+1\n",
+    "            \n",
+    "        if lsd < gs:\n",
+    "            LSD.append(lsd)\n",
+    "        else:\n",
+    "            LSD.append(gs)\n",
+    "            print(\"LSD(0-10):\", LSD[0:10])\n",
+    "            print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
     "            return LSD    \n",
     "          "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#refer to graph.cpp: lsd_kstar for implementation details (relatively complex)\n",
-    "def lsd_kstar(G,Gstat,queryType,k):\n",
-    "    #Incomplete\n",
-    "    return -1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#refer to graph.cpp: ladder_kclique for implementation details (relatively easy, need to function \"computeLS\")\n",
+    "#refer to graph.cpp: ladder_kclique for implementation details \n",
     "def lsd_kclique(G,Gstat,queryType,k):\n",
-    "    #Incomplete\n",
-    "    return -1"
+    "    start_time = time.time()\n",
+    "    gs = edgeDP_computeGS(G,Gstat,queryType,k)\n",
+    "    ls = edgeDP_computeLS(G,Gstat,queryType,k)\n",
+    "    print(\"gs: \", gs, \"; ls\", ls)\n",
+    "    \n",
+    "    LSD = []\n",
+    "    lsd = ls \n",
+    "    t = 0\n",
+    "    \n",
+    "    while 1:\n",
+    "        if lsd < gs:\n",
+    "            LSD.append(lsd)\n",
+    "        else:\n",
+    "            LSD.append(gs)\n",
+    "            print(\"LSD(0-10):\", LSD[0:10])\n",
+    "            print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
+    "            return LSD   \n",
+    "        lsd = lsd + comb(Gstat.maxA+t, k-3)\n",
+    "        t +=1 \n",
+    "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#refer to graph.cpp: ladder_ktriangle for implementation details (relatively easy, need to function \"computeLS\")\n",
+    "#refer to graph.cpp: ladder_ktriangle for implementation details \n",
     "def lsd_ktriangle(G,Gstat,queryType,k):\n",
-    "    #Incomplete\n",
+    "    start_time = time.time()\n",
+    "    gs = edgeDP_computeGS(G,Gstat,queryType,k)\n",
+    "    ls = edgeDP_computeLS(G,Gstat,queryType,k)\n",
+    "    print(\"gs: \", gs, \"; ls\", ls)\n",
+    "    \n",
+    "    LSD = []\n",
+    "    lsd = ls \n",
+    "    t = 0\n",
+    "    amax = Gstat.maxA\n",
+    "    \n",
+    "    while 1:\n",
+    "        if lsd < gs:\n",
+    "            LSD.append(lsd)\n",
+    "        else:\n",
+    "            LSD.append(gs)\n",
+    "            print(\"LSD(0-10):\", LSD[0:10])\n",
+    "            print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
+    "            return LSD   \n",
+    "        \n",
+    "        lsd = lsd + 3* comb(amax+t, k-1) + (amax+t) * comb(amax+t,k-2)\n",
+    "        t +=1 \n",
+    "    \n",
     "    return -1"
    ]
   },
@@ -1238,10 +1401,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gs:  16293332.0\n",
+      "LSD(0-10): [856891.0, 857935.0, 858980.0, 860026.0, 861073.0, 862121.0, 863170.0, 864220.0, 865271.0, 866323.0]\n",
+      "--- 78.09756588935852 seconds ---\n"
+     ]
+    }
+   ],
+   "source": [
+    "####kstar \n",
+    "queryType = \"kstar\"\n",
+    "k=3\n",
+    "#print(edgeDP_computeLS(G,Gstat,queryType,k))\n",
+    "lsd = edgeDP_LadderFunction(G, Gstat, queryType, k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16573.0\n",
+      "gs:  8146666.0 ; ls 16573.0\n",
+      "LSD(0-10): [16573.0, 16866.0, 17160.0, 17455.0, 17751.0, 18048.0, 18346.0, 18645.0, 18945.0, 19246.0]\n",
+      "--- 175.89949202537537 seconds ---\n"
+     ]
+    }
+   ],
+   "source": [
+    "####kclique \n",
+    "queryType = \"kclique\"\n",
+    "k=4\n",
+    "#print(edgeDP_computeLS(G,Gstat,queryType,k))\n",
+    "lsd = edgeDP_LadderFunction(G, Gstat, queryType, k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "116072.0\n",
+      "gs:  40733330.0 ; ls 116072.0\n",
+      "LSD(0-10): [116072.0, 117244.0, 118420.0, 119600.0, 120784.0, 121972.0, 123164.0, 124360.0, 125560.0, 126764.0]\n",
+      "--- 206.5660719871521 seconds ---\n"
+     ]
+    }
+   ],
+   "source": [
+    "####kclique \n",
+    "queryType = \"ktriangle\"\n",
+    "k=2\n",
+    "#print(edgeDP_computeLS(G,Gstat,queryType,k))\n",
+    "lsd = edgeDP_LadderFunction(G, Gstat, queryType, k)"
+   ]
   },
   {
    "cell_type": "code",
